tests/snapshots/templating__basic_project_tree.snap
---
source: tests/templating.rs
expression: tree
---
[
    "README.md",
    "docs/static.md",
    "src/dynamic.txt",
]
